[gd_scene load_steps=15 format=4 uid="uid://dn7roektby4v5"]

[ext_resource type="PackedScene" uid="uid://jqaloto22mwj" path="res://starter_room.tscn" id="1_6hynw"]
[ext_resource type="PackedScene" path="res://Characters/crownman.tscn" id="2_if3jr"]
[ext_resource type="Script" path="res://tracking_camera.gd" id="3_mdauh"]
[ext_resource type="PackedScene" uid="uid://dkes1732debii" path="res://task-ui/task_ui.tscn" id="6_t7qfc"]
[ext_resource type="PackedScene" uid="uid://gw27ib67vnj7" path="res://Screens/dialog.tscn" id="6_ucbhr"]
[ext_resource type="Script" path="res://characters.gd" id="7_rww84"]
[ext_resource type="PackedScene" uid="uid://cvvwpf6wgsbi1" path="res://Screens/pause_screen.tscn" id="7_yipv8"]
[ext_resource type="PackedScene" uid="uid://dqu6m5vnlfexb" path="res://Screens/welcome.tscn" id="8_6bsyb"]
[ext_resource type="PackedScene" path="res://Characters/murder_rock!!!.tscn" id="8_khou2"]
[ext_resource type="PackedScene" path="res://Characters/stickman.tscn" id="8_o01qh"]
[ext_resource type="Script" path="res://Characters/stick_cam.gd" id="9_i1uqc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6xu6e"]
size = Vector2(1152, 448)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1o8xm"]
size = Vector2(1152, 448)

[sub_resource type="GDScript" id="GDScript_lgt6r"]
script/source = "extends Control

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass
	#$Label2.hide()



# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta: float) -> void:
	if Input.is_action_just_pressed(\"enter\"):
		$Label2.text = \"Hello \"+$TextEdit.text.trim_suffix(\"\\n\")+\"!\"
		#$TextEdit.clear()
		$TextEdit.hide()
		hide()
		#start button code
		#$Label2.show()
		#var button = Button.new()
		#button.text = \"Click to start!\"
		#button.position = $TextEdit.position
		#button.size = $TextEdit.size
		#button.pressed.connect(self._button_pressed)
		#add_child(button)

func _button_pressed():
	hide()
"

[node name="room" type="Node2D"]

[node name="Collisions" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collisions"]
position = Vector2(-8, 2)
build_mode = 1
polygon = PackedVector2Array(-1154, 446, -1154, 766, -2306, 766, -2306, 318, 8, 318, 8, 766, -1144, 766, -1144, 446)
one_way_collision_margin = 0.0

[node name="Room1" parent="." instance=ExtResource("1_6hynw")]
position = Vector2(-2314, 128)

[node name="Room1 Area" type="Area2D" parent="Room1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room1/Room1 Area"]
position = Vector2(576, 416)
shape = SubResource("RectangleShape2D_6xu6e")
metadata/_edit_lock_ = true

[node name="Room2" parent="." instance=ExtResource("1_6hynw")]
position = Vector2(-1152, 128)
tile_map_data = PackedByteArray("AAAAAAMAAAAAAAAAAAABAAMAAAAAAAAAAAACAAMAAAAAAAAAAAADAAMAAAAAAAAAAAAEAAMAAAAAAAAAAAAFAAMAAAAAAAAAAAAGAAMAAAAAAAAAAAAHAAMAAAAAAAAAAAAIAAMAAAAAAAAAAAAJAAMAAAAAAAAAAAAKAAMAAAAAAAAAAAALAAMAAAAAAAAAAAAMAAMAAAAAAAAAAAANAAMAAAAAAAAAAAAOAAMAAAAAAAAAAAAPAAMAAAAAAAAAAAAQAAMAAAAAAAAAAAARAAMAAAAAAAAAAAARAAQAAAAAAAAAAAAQAAQAAgAAAAAAAAAPAAQAAAAAAAAAAAAOAAQAAAAAAAAAAAANAAQAAgAAAAAAAAAMAAQAAAAAAAAAAAALAAQAAAAAAAAAAAAKAAQAAgAAAAAAAAAJAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAHAAQAAgAAAAAAAAAGAAUAAAAAAAAAAAAFAAUAAAAAAAAAAAAEAAUAAAAAAAAAAAADAAQAAAAAAAAAAAACAAQAAAAAAAAAAAABAAQAAgAAAAAAAAAEAAQAAgAAAAAAAAAFAAQAAAAAAAAAAAAGAAQAAAAAAAAAAAAAAAQAAAAAAAAAAAABAAUAAAAAAAAAAAAAAAUAAAAAAAAAAAACAAUAAAAAAAAAAAADAAUAAAAAAAAAAAAHAAUAAAAAAAAAAAAIAAUAAAAAAAAAAAAJAAUAAAAAAAAAAAAKAAUAAAAAAAAAAAALAAUAAAAAAAAAAAAMAAUAAAAAAAAAAAANAAUAAAAAAAAAAAAOAAUAAAAAAAAAAAAPAAUAAAAAAAAAAAAQAAUAAAAAAAAAAAARAAUAAAAAAAAAAAARAAYAAAAAAAAAAAAQAAYAAgAAAAAAAAAPAAYAAAAAAAAAAAAOAAYAAAAAAAAAAAANAAYAAgAAAAAAAAAMAAYAAAAAAAAAAAALAAYAAAAAAAAAAAAKAAcAAAAAAAAAAAAJAAcAAAAAAAAAAAAIAAcAAAAAAAAAAAAHAAcAAAAAAAAAAAAGAAcAAAAAAAAAAAAGAAYAAAAAAAAAAAAFAAYAAAAAAAAAAAAEAAYAAgAAAAAAAAADAAYAAAAAAAAAAAACAAYAAAAAAAAAAAABAAYAAgAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAABAAcAAAAAAAAAAAACAAcAAAAAAAAAAAADAAcAAAAAAAAAAAAEAAcAAAAAAAAAAAAFAAcAAAAAAAAAAAAJAAYAAAAAAAAAAAAIAAYAAAAAAAAAAAAHAAYAAgAAAAAAAAAKAAYAAgAAAAAAAAAMAAcAAAAAAAAAAAALAAcAAAAAAAAAAAANAAcAAAAAAAAAAAAOAAcAAAAAAAAAAAAPAAcAAAAAAAAAAAAQAAcAAAAAAAAAAAARAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAABAAgAAgAAAAAAAAACAAgAAAAAAAAAAAADAAgAAAAAAAAAAAAEAAgAAgAAAAAAAAAFAAgAAAAAAAAAAAAGAAgAAAAAAAAAAAAHAAgAAgAAAAAAAAAIAAgAAAAAAAAAAAAJAAgAAAAAAAAAAAAKAAgAAgAAAAAAAAALAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAANAAgAAgAAAAAAAAAOAAgAAAAAAAAAAAAPAAgAAAAAAAAAAAAQAAgAAgAAAAAAAAAQAAkAAAAAAAAAAAARAAkAAAAAAAAAAAARAAgAAAAAAAAAAAAPAAkAAAAAAAAAAAAOAAkAAAAAAAAAAAANAAkAAAAAAAAAAAAMAAkAAAAAAAAAAAALAAkAAAAAAAAAAAAKAAkAAAAAAAAAAAAJAAkAAAAAAAAAAAAIAAkAAAAAAAAAAAAHAAkAAAAAAAAAAAAGAAkAAAAAAAAAAAAFAAkAAAAAAAAAAAAEAAkAAAAAAAAAAAADAAkAAAAAAAAAAAACAAkAAAAAAAAAAAABAAkAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAIAAgAAAAAAAAABAAIAAgAAAAAAAAACAAIAAgAAAAAAAAADAAIAAgAAAAAAAAAEAAIAAgAAAAAAAAAFAAIAAgAAAAAAAAAGAAIAAgAAAAAAAAAHAAIAAgAAAAAAAAAIAAIAAgAAAAAAAAAJAAIAAgAAAAAAAAAKAAIAAgAAAAAAAAALAAIAAgAAAAAAAAAMAAIAAgAAAAAAAAANAAIAAgAAAAAAAAAOAAIAAgAAAAAAAAAPAAIAAgAAAAAAAAAQAAIAAgAAAAAAAAARAAIAAgAAAAAAAAARAAEAAgACAAAAAAAQAAEAAgAAAAAAAAAPAAEAAgACAAAAAAAOAAEAAgAAAAAAAAANAAEAAgACAAAAAAAMAAEAAgAAAAAAAAALAAEAAgACAAAAAAAKAAEAAgAAAAAAAAAJAAEAAgACAAAAAAAIAAEAAgAAAAAAAAAHAAEAAgACAAAAAAAGAAEAAgAAAAAAAAAFAAEAAgACAAAAAAAEAAEAAgAAAAAAAAADAAEAAgACAAAAAAACAAEAAgAAAAAAAAABAAEAAgACAAAAAAAAAAEAAgAAAAAAAAARAAAAAgABAAAAAAAQAAAAAgAAAAAAAAAPAAAAAgABAAAAAAAOAAAAAgAAAAAAAAANAAAAAgABAAAAAAAMAAAAAgAAAAAAAAALAAAAAgABAAAAAAAKAAAAAgAAAAAAAAAJAAAAAgABAAAAAAAIAAAAAgAAAAAAAAAHAAAAAgABAAAAAAAGAAAAAgAAAAAAAAAFAAAAAgABAAAAAAAEAAAAAgAAAAAAAAADAAAAAgABAAAAAAACAAAAAgAAAAAAAAABAAAAAgABAAAAAAAAAAAAAgAAAAAAAAARAP//AgAAAAAAAAAQAP//AgAAAAAAAAAPAP//AgAAAAAAAAAOAP//AgAAAAAAAAANAP//AgAAAAAAAAAMAP//AgAAAAAAAAALAP//AgAAAAAAAAAKAP//AgAAAAAAAAAJAP//AgAAAAAAAAAIAP//AgAAAAAAAAAHAP//AgAAAAAAAAAGAP//AgAAAAAAAAAFAP//AgAAAAAAAAAEAP//AgAAAAAAAAADAP//AgAAAAAAAAACAP//AgAAAAAAAAABAP//AgAAAAAAAAAAAP//AgAAAAAAAAAAAP7/AgAAAAAAAAABAP7/AgAAAAAAAAACAP7/AgAAAAAAAAADAP7/AgAAAAAAAAAEAP7/AgAAAAAAAAAFAP7/AgAAAAAAAAAJAP7/AgAAAAAAAAAIAP7/AgAAAAAAAAAHAP7/AgAAAAAAAAAGAP7/AgAAAAAAAAAKAP7/AgAAAAAAAAALAP7/AgAAAAAAAAAMAP7/AgAAAAAAAAANAP7/AgAAAAAAAAAOAP7/AgAAAAAAAAAPAP7/AgAAAAAAAAAQAP7/AgAAAAAAAAARAP7/AgAAAAAAAAA=")

[node name="Room2 Area" type="Area2D" parent="Room2"]
position = Vector2(-2, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room2/Room2 Area"]
position = Vector2(578, 416)
shape = SubResource("RectangleShape2D_1o8xm")

[node name="murder rock!!!" parent="." instance=ExtResource("8_khou2")]
position = Vector2(-764, 189)

[node name="HUD" type="CanvasLayer" parent="."]

[node name="taskUI" parent="HUD" instance=ExtResource("6_t7qfc")]
top_level = true

[node name="Dialog" parent="." instance=ExtResource("6_ucbhr")]
offset_left = -1149.0
offset_top = 138.0
offset_right = -1149.0
offset_bottom = 138.0

[node name="Screens" type="CanvasLayer" parent="."]
layer = 2

[node name="Pause screen" parent="Screens" instance=ExtResource("7_yipv8")]

[node name="Welcome" parent="Screens" instance=ExtResource("8_6bsyb")]
script = SubResource("GDScript_lgt6r")

[node name="ReferenceRect" type="ReferenceRect" parent="."]
visible = false
offset_left = -1152.0
offset_right = 1.0
offset_bottom = 769.0

[node name="characters" type="Node2D" parent="."]
script = ExtResource("7_rww84")

[node name="stickman" parent="characters" instance=ExtResource("8_o01qh")]
visible = false
position = Vector2(-1906, 248)

[node name="Camera2D" type="Camera2D" parent="characters/stickman"]
visible = false
zoom = Vector2(1.6, 1.6)
script = ExtResource("9_i1uqc")

[node name="crowman" parent="characters" instance=ExtResource("2_if3jr")]
position = Vector2(-1726, 461)
motion_mode = 1

[node name="Camera2D" type="Camera2D" parent="characters/crowman"]
position = Vector2(1, 0)
zoom = Vector2(1.6, 1.6)
script = ExtResource("3_mdauh")

[connection signal="body_entered" from="Room1/Room1 Area" to="Screens/Pause screen" method="_on_room_1_area_body_entered"]
[connection signal="body_entered" from="Room1/Room1 Area" to="characters/crowman" method="_on_room_1_area_body_entered"]
[connection signal="body_entered" from="Room1/Room1 Area" to="characters/crowman/Camera2D" method="_on_room_1_area_body_entered"]
[connection signal="body_entered" from="Room2/Room2 Area" to="Screens/Pause screen" method="_on_room_2_area_body_entered"]
[connection signal="body_entered" from="Room2/Room2 Area" to="characters/crowman" method="_on_room_2_area_body_entered"]
[connection signal="body_entered" from="Room2/Room2 Area" to="characters/crowman/Camera2D" method="_on_room_2_area_body_entered"]
[connection signal="body_entered" from="murder rock!!!" to="murder rock!!!" method="_on_body_entered"]
[connection signal="body_exited" from="murder rock!!!" to="murder rock!!!" method="_on_body_exited"]
[connection signal="dialog" from="murder rock!!!" to="Dialog" method="_on_murder_rock_dialog"]
[connection signal="dialog" from="murder rock!!!" to="characters/crowman" method="_on_murder_rock_dialog"]
[connection signal="end_convo" from="Dialog" to="characters/crowman" method="_on_dialog_end_convo"]
[connection signal="hidden" from="Screens/Pause screen" to="characters/crowman/Camera2D" method="_on_pause_screen_hidden"]
[connection signal="visibility_changed" from="Screens/Pause screen" to="characters/crowman" method="_on_pause_screen_visibility_changed"]
[connection signal="hidden" from="Screens/Welcome" to="characters/crowman" method="_on_welcome_hidden"]
[connection signal="hidden" from="Screens/Welcome" to="characters/crowman/Camera2D" method="_on_welcome_hidden"]
